--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "role": "Developer"
     }],
     "require": {
+        "duncan3dc/helpers": "*",
         "swiftmailer/swiftmailer": "5.2.*",
         "php": ">=5.4.0"
     },
