--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "role": "Developer"
     }],
     "require": {
-        "duncan3dc/helpers": "*",
+        "duncan3dc/helpers": ">=1.0.13",
         "swiftmailer/swiftmailer": "5.2.*",
         "php": ">=5.4.0"
     },
