--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-4": {"duncan3dc\\": "src/"}
+        "psr-4": {"duncan3dc\\SwiftMailer\\": "src/"}
     }
 }
