--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-/phpunit.xml        export-ignore
+/phpunit.xml.dist   export-ignore
 /tests              export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
