--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "swiftmailer/swiftmailer": "^5.4",
         "php": ">=5.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.1"
+    },
     "autoload": {
         "psr-4": {"duncan3dc\\SwiftMailer\\": "src/"}
     }
