--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "duncan3dc/blade": "^2.2|^3.0",
         "swiftmailer/swiftmailer": "^5.4",
-        "php": ">=5.6"
+        "php": "^5.6|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.1"
