--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
         "php": "^5.6|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.1"
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
-        "psr-4": {"duncan3dc\\SwiftMailer\\": "src/"}
+        "psr-4": {
+            "duncan3dc\\SwiftMailer\\": "src/",
+            "duncan3dc\\SwiftMailerTests\\": "tests/"
+        }
     }
 }
