--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": "^5.6|^7.0"
     },
     "require-dev": {
+        "duncan3dc/object-intruder": "^0.1.0",
         "phpunit/phpunit": "^5.7"
     },
     "autoload": {
