--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.1.0",
+        "mockery/mockery": "^0.9.9",
         "phpunit/phpunit": "^5.7"
     },
     "autoload": {
