--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "duncan3dc/blade": "^2.2|^3.0",
         "swiftmailer/swiftmailer": "^5.4",
-        "php": "^5.6|^7.0"
+        "php": "^7.0"
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.1.0",
