--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,11 @@ before_script:
   - mailcatcher
 
 script:
-  - ./vendor/bin/phpunit
-  - ./tests/lint.sh
+  - vendor/bin/phpunit --coverage-clover=clover.xml
+  - tests/lint.sh
+
+after_success:
+  - vendor/bin/coveralls
 
 git:
   depth: 5
