--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "duncan3dc/object-intruder": "^0.1.0",
         "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
