--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "satooshi/php-coveralls": "^2.0"
     },
     "autoload": {
-        "psr-4": {
-            "duncan3dc\\Mailer\\": "src/",
-            "duncan3dc\\MailerTests\\": "tests/"
-        }
+        "psr-4": {"duncan3dc\\Mailer\\": "src/"}
+    },
+    "autoload-dev": {
+        "psr-4": {"duncan3dc\\MailerTests\\": "tests/"}
     }
 }
