--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.4",
-        "satooshi/php-coveralls": "^2.0"
+        "phpunit/phpunit": "^7.4"
     },
     "autoload": {
         "psr-4": {"duncan3dc\\Mailer\\": "src/"}
