--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 /tests              export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.travis.yml        export-ignore
+/.github            export-ignore
