Use mailercatcher, but it doesn't record specifc enough details (cc, bcc, reply-to, etc)

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3 || ^1.0",
+        "guzzlehttp/guzzle": "^7.0",
         "mockery/mockery": "^1.4.4",
+        "ext-json": "*",
         "phpunit/phpunit": "^8.5.29"
     },
     "autoload": {
