--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
     },
     "autoload-dev": {
         "psr-4": {"duncan3dc\\MailerTests\\": "tests/"}
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ]
     }
 }
