--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }],
     "require": {
         "duncan3dc/blade": "^4.0",
-        "symfony/mailer": "^5.4 || ^6.0 || 7.0",
+        "symfony/mailer": "^5.4 || ^6.0 || ^7.0",
         "php": "^7.3 || ^8.0"
     },
     "require-dev": {
